# 3d_NAV

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TODOS.md  _audit_imports.py  _run_eval.py  _upload_eval.py  build_all.sh  lingtu  lingtu.bat  lingtu.py  lingtu.sh  lingtu_cli.py  main_nav.py  mapping.sh  planning.sh  pyproject.toml  readme.md  requirements-agent.txt  requirements-dev.txt  requirements.txt  save_map.sh
src/: README.md  pyproject.toml
src/base_autonomy/: COORDINATE_FRAMES.md  MODULES.md  __init__.py  autonomy_module.py  local_planner_module.py  native_factories.py  path_follower_module.py  readme.md  terrain_module.py
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/modules/: __init__.py  _nav_core_loader.py  autonomy_module.py  local_planner_module.py  path_follower_module.py  terrain_module.py
src/base_autonomy/tests/: __init__.py  conftest.py  test_autonomy_modules.py
src/core/: MODULES.md  README.md  __init__.py  algorithm_gates.py  backend_status.py  blueprint.py  clock.py  config.py  config_loader.py  coordinator.py  dds.py  dynamic_filter.py  efficiency_status.py  gateway_runtime_acceptance.py  inspection_acceptance.py  module.py  native_factories.py  native_install.py  native_module.py  plugin_seed.py  product_field_check.py  registry.py  remote_ports.py  rerun_module.py  ros2_context.py  rpc_client.py  runtime_evidence.py  runtime_interface.py  runtime_policy.py  runtime_switch.py  runtime_validation_gates.py  same_source_map_artifacts.py  service_manager.py  stream.py  swap_manager.py  worker.py  worker_manager.py
src/core/blueprints/: README.md  __init__.py  factory.py  full_stack.py  full_stack_wiring.py  multi_robot.py  navigation.py  profile_graph.py  runtime_endpoint.py  simulation.py  simulation_contract.py  stub.py
src/core/contracts/: __init__.py  messages.py
src/core/devices/: __init__.py  base.py  decoder.py  manager.py  spec.py
src/core/introspection/: __init__.py  dot.py  text.py
src/core/msgs/: README.md  __init__.py  geometry.py  gnss.py  nav.py  robot.py  scene.py  semantic.py  sensor.py
src/core/resource_monitor/: __init__.py  monitor.py
src/core/spec/: __init__.py  driver.py  llm.py  memory.py  nav.py  perception.py  planning.py  safety.py
src/core/tests/: __init__.py  _test_utils.py  conftest.py  test_algorithm_closure.py  test_algorithm_dataflow_summary.py  test_backend_status.py  test_backpressure_and_store.py  test_binary_codec.py  test_blackbox_recorder.py  test_blueprints_all.py  test_calibration_check.py  test_cli_banner_encoding.py  test_cli_no_repl.py  test_cmd_vel_mux.py  test_cmu_unity_lingtu_adapter.py  test_cmu_unity_sim_gate.py  test_comm_stats.py  test_config_clock.py  test_config_validation.py  test_contracts.py  test_core.py  test_crash_isolation.py  test_cross_module_integration.py  test_degeneracy_fusion.py  test_deployment_service_contracts.py  test_devices.py  test_driver_spec.py  test_dynamic_filter.py  test_dynamic_obstacle_local_planner_gate.py  test_enterprise_features.py  test_exploration_supervisor.py  test_fastlio_speed_boundary_gate.py  test_follow_person_selection.py  test_frontier_memory_modules.py  test_gateway_app_bootstrap.py  test_gateway_commands.py  test_gateway_health_contract.py  test_gateway_helpers.py  test_gateway_readiness.py  test_gateway_route_split.py  (+111 more)
src/core/transport/: README.md  __init__.py  abc.py  adapter.py  dds.py  dual.py  factory.py  local.py  ros2_mixin.py  shm.py
src/core/utils/: __init__.py  binary_codec.py  blackbox_recorder.py  calibration_check.py  livox_config.py  redact.py  robustness.py  sanitize.py  scene_mode_detector.py  validation.py
src/drivers/: MODULES.md  README.md  __init__.py  camera_module.py  lidar_module.py  robot_profile.py  sensor_suite.py  spec.py  teleop_module.py
src/drivers/lidar/: __init__.py  _dds.py  lidar.py  lidar_module.py
src/drivers/real/: README.md  (+1 more)
src/exploration/: MODULES.md  README.md  __init__.py  exploration_supervisor_module.py  native_factories.py  tare_explorer_module.py  tare_ros2_bridge_module.py
src/gateway/: MODULES.md  README.md  __init__.py  auth.py  gateway_module.py  map_dashboard.py  mcp_server.py  native_factories.py  rerun_bridge_module.py  rerun_visualizer.py  schemas.py
src/global_planning/: MODULES.md  README.md  __init__.py
src/legacy/: MODULES.md  README.md  __init__.py
src/lingtu/: MODULES.md  README.md  __init__.py  camera.py  detector.py  lidar.py  navigator.py  robot.py  slam.py
src/mappilot_sdk/: pyproject.toml
src/memory/: MODULES.md  README.md  __init__.py
src/nav/: MODULES.md  README.md  __init__.py  cmd_vel_mux_module.py  elevation_map_module.py  esdf_module.py  frontier_explorer_module.py  global_planner_service.py  navigation_module.py  occupancy_grid_module.py  plan_safety.py  ros2_grid_bridge_module.py  ros2_path_bridge_module.py  ros2_waypoint_bridge_module.py  safety_ring_module.py  traversability_cost_module.py  traversable_frontier_module.py  voxel_grid_module.py  waypoint_tracker.py
src/nav_core/: CMakeLists.txt
src/nav_rings/: setup.cfg
src/nav_services/: package.xml  setup.cfg
src/ota_daemon/: CMakeLists.txt
src/reconstruction/: package.xml  setup.py
src/remote_monitoring/: BUILD_STATUS.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PLAN.md  QUICKSTART.md  README.md  package.xml
src/semantic/: MODULES.md  README.md  __init__.py
src/semantic_common/: __init__.py  package.xml
src/semantic_perception/: CMakeLists.txt  README.md  __init__.py  package.xml  setup.py
src/semantic_planner/: __init__.py  package.xml  setup.py
src/slam/: MODULES.md  README.md  __init__.py  depth_visual_odom_module.py  fastlio2_live_bridge.py  fastlio2_nav_bridge.py  gnss_bridge.py  gnss_module.py  gnss_serial_driver.py  native_factories.py  ntrip_client_module.py  slam_bridge_module.py  slam_module.py
src/vla_nav/: package.xml  setup.cfg  setup.py
src/webrtc/: MODULES.md  README.md  __init__.py  webrtc_stream_module.py
(+1963 files in other folders)
