[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtu"
version = "1.8.0"
description = "LingTu — autonomous navigation for quadruped robots"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "fastapi",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
perception = ["torch", "ultralytics", "open-clip-torch"]
llm = ["openai", "anthropic"]
vector = ["chromadb"]
dev = ["pytest"]

[project.scripts]
lingtu = "lingtu_cli:main"

[tool.setuptools]
py-modules = ["lingtu_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "cli"]
exclude = [
    "src/global_planning/PCT_planner/planner/lib/3rdparty",
    "src/global_planning/PCT_planner/planner/scripts",
    "src/global_planning/PCT_planner/tomography",
    "**/legacy/*",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (common in Module __init__)
    "B905",  # zip strict (py310 compat)
    "E402",  # module level import not at top (sys.path manipulation)
    "F401",  # unused import (re-exports in __init__.py)
    "F811",  # redefinition of unused name (test fixtures)
    "RUF001",  # ambiguous unicode in string (Chinese chars, legacy code)
    "RUF002",  # ambiguous unicode in docstring (Chinese chars, legacy code)
    "RUF003",  # ambiguous unicode in comment (Chinese chars, legacy code)
    "UP035",   # deprecated typing imports (Dict→dict etc, too many to fix at once)
    "UP031",   # printf-string-formatting (legacy %s style, migrate gradually)
    "E741",    # ambiguous variable name (l, I, O — common in math code)
    "RUF012",  # mutable class default (Module ports use this pattern intentionally)
    "F403",    # undefined-local-with-import-star (legacy ROS2-style wildcard imports)
    "B027",    # empty-method-without-abstract-decorator (Module lifecycle stubs)
    "RUF046",  # unnecessary-cast-to-int (explicit int() for clarity in grid math)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "nav", "semantic", "drivers", "gateway", "memory", "cli"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/core/tests/*" = ["F811", "E402"]
"src/semantic/*/test*" = ["F811", "E402"]
"calibration/**" = ["W191", "E731", "F821"]

[tool.pytest.ini_options]
testpaths = [
    "src/core/tests",
    "src/semantic/perception/tests",
    "src/semantic/planner/test",
]
# tests/ directory has root-level integration tests run separately:
#   python -m pytest tests/test_belief_system.py tests/test_goal_resolver.py ... -q
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
