[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtu"
version = "2.2.0"
description = "LingTu 鈥?autonomous navigation for quadruped robots"
requires-python = ">=3.10"
dependencies = [
    # Core (always needed)
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
vision = ["opencv-python-headless>=4.5"]
ml = ["scikit-learn>=1.0"]
llm = ["openai>=1.0", "anthropic"]
nlp = ["jieba>=0.42"]
agent = ["langchain-core>=0.2", "langchain-openai>=0.1", "langchain>=0.2"]
perception = ["torch", "ultralytics", "open-clip-torch"]
vector = ["chromadb"]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "ruff", "mypy"]
# ThunderDriver requires brainstem gRPC contract package brainstem_api (v2.0.0).
# Install on real robot / sunrise deploy: pip install -e '.[thunder]'
# stub / sim mode does not need this.
thunder = ["brainstem-api @ git+https://github.com/Kitjesen/brainstem_api.git@v2.0.0#subdirectory=python"]
all = ["lingtu[vision,ml,llm,nlp,agent,perception,vector]"]

[project.scripts]
lingtu = "lingtu_cli:main"

[tool.setuptools]
py-modules = ["lingtu_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "cli"]
exclude = [
    "src/global_planning/pct_planner/planner/lib/3rdparty",
    "src/global_planning/pct_planner/planner/scripts",
    "src/global_planning/pct_planner/tomography",
    "src/global_planning/pct_planner/launch",
    "**/legacy/*",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
    "D101",  # pydocstyle: missing docstring in public class
    "D102",  # pydocstyle: missing docstring in public method
    "D103",  # pydocstyle: missing docstring in public function
    "S",     # flake8-bandit: security lints
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (common in Module __init__)
    "B905",  # zip strict (py310 compat)
    "E402",  # module level import not at top (sys.path manipulation)
    "F401",  # unused import (re-exports in __init__.py)
    "F811",  # redefinition of unused name (test fixtures)
    "RUF001",  # ambiguous unicode in string (Chinese chars, legacy code)
    "RUF002",  # ambiguous unicode in docstring (Chinese chars, legacy code)
    "RUF003",  # ambiguous unicode in comment (Chinese chars, legacy code)
    "UP035",   # deprecated typing imports (Dict鈫抎ict etc, too many to fix at once)
    "UP031",   # printf-string-formatting (legacy %s style, migrate gradually)
    "E741",    # ambiguous variable name (l, I, O 鈥?common in math code)
    "RUF012",  # mutable class default (Module ports use this pattern intentionally)
    "F403",    # undefined-local-with-import-star (legacy ROS2-style wildcard imports)
    "B027",    # empty-method-without-abstract-decorator (Module lifecycle stubs)
    "RUF046",  # unnecessary-cast-to-int (explicit int() for clarity in grid math)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "nav", "semantic", "drivers", "gateway", "memory", "cli"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/core/tests/*" = ["F811", "E402", "D"]
"src/semantic/*/test*" = ["F811", "E402", "D"]
"src/*/tests/*" = ["D"]
"sim/tests/*" = ["D"]
"scripts/*" = ["D"]
"third_party/*" = ["D", "B", "S"]
"calibration/**" = ["W191", "E731", "F821"]
"docs/**" = ["E702", "E701"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption
ignore_missing_imports = true   # many deps lack stubs
exclude = ["src/global_planning/pct_planner/planner/lib/3rdparty/", "third_party/", "research/"]

[tool.pytest.ini_options]
testpaths = [
    "src/core/tests",
    "src/nav/tests",
    "src/gateway/tests",
    "src/drivers/tests",
    "src/memory/tests",
    "sim/tests",
    "src/slam/tests",
    "src/semantic/perception/tests",
    "src/semantic/planner/tests",
]
# tests/ directory has root-level integration tests run separately:
#   python -m pytest tests/ -q
norecursedirs = [
    "src/global_planning/pct_planner/planner/lib/3rdparty",
    "third_party",
    "research",
    ".venv",
    "venv",
    ".omc",
    "artifacts",
    "build",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "ros2: tests that require ROS2 runtime",
    "slow: tests that take >5 seconds",
    "sim: tests that require MuJoCo simulation",
]


