<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_services</name>
  <version>0.1.0</version>
  <description>L5 运营服务 — 地图管理、巡检路线、电子围栏、任务调度、任务日志</description>
  <maintainer email="hong@inovxio.com">Kitjesen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>semantic_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
