<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_common</name>
  <version>1.0.0</version>
  <description>L0 base infrastructure: shared validation, sanitization, and robustness utilities for all Python layers</description>
  <maintainer email="dev@3dnav.io">3dNAV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_python</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
