cmake_minimum_required(VERSION 3.8)
project(localizer)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fexceptions")

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-O3)
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(message_filters REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(interface REQUIRED)
find_package(pcl_conversions REQUIRED)
find_package(std_srvs REQUIRED)

find_package(Eigen3 REQUIRED)
find_package(PCL REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(OpenMP REQUIRED)

include_directories(
  ${EIGEN3_INCLUDE_DIR}
  ${PCL_INCLUDE_DIRS}
)

set(CPU_BBS3D_ROOT "" CACHE PATH "Optional local install prefix for cpu_bbs3d")
if(NOT CPU_BBS3D_ROOT AND DEFINED ENV{CPU_BBS3D_ROOT})
  set(CPU_BBS3D_ROOT "$ENV{CPU_BBS3D_ROOT}")
endif()

find_library(CPU_BBS3D_LIBRARY
  NAMES cpu_bbs3d libcpu_bbs3d.so
  HINTS ${CPU_BBS3D_ROOT}
  PATH_SUFFIXES lib lib64
  PATHS /usr/local
)
find_path(CPU_BBS3D_INCLUDE_DIR
  NAMES cpu_bbs3d/bbs3d.hpp
  HINTS ${CPU_BBS3D_ROOT}
  PATH_SUFFIXES include
  PATHS /usr/local /usr/local/include /usr/local/include/bbs3d
)

if(CPU_BBS3D_LIBRARY AND CPU_BBS3D_INCLUDE_DIR)
  message(STATUS "BBS3D enabled: ${CPU_BBS3D_LIBRARY}")
  add_compile_definitions(LINGTU_ENABLE_BBS3D=1)
  include_directories(${CPU_BBS3D_INCLUDE_DIR})
  set(CPU_BBS3D_LINK ${CPU_BBS3D_LIBRARY})
else()
  message(WARNING "BBS3D not found; building ICP-only localizer without global_relocalize")
  set(CPU_BBS3D_LINK "")
endif()

set(SRC_LIST
  src/localizers/commons.cpp
  src/localizers/icp_localizer.cpp
  src/localizers/bbs3d_global_localizer.cpp
)

add_executable(localizer_node src/localizer_node.cpp ${SRC_LIST})
ament_target_dependencies(
  localizer_node
  rclcpp
  std_msgs
  sensor_msgs
  nav_msgs
  message_filters
  pcl_conversions
  tf2_ros
  geometry_msgs
  interface
  std_srvs
)
target_link_libraries(
  localizer_node
  ${PCL_LIBRARIES}
  yaml-cpp
  ${CPU_BBS3D_LINK}
  OpenMP::OpenMP_CXX
)

install(TARGETS localizer_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
install(DIRECTORY rviz DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
