<?xml version="1.0"?>
<package format="3">
  <name>pointlio</name>
  <version>1.0.0</version>
  <description>
    Point-LIO: Robust High-Bandwidth LiDAR Inertial Odometry.
    Per-point state update for aggressive motion and severe vibration.
    Based on SMBU-PolarBear fork (ROS2 Humble, iVox).
  </description>

  <maintainer email="kitjesen@inovxio.com">inovxio</maintainer>

  <license>BSD</license>

  <author email="hdj65822@connect.hku.hk">Dongjiao He</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>
  <depend>libunwind-dev</depend>
  <depend>libgoogle-glog-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
