<?xml version="1.0"?>
<package format="3">
  <name>wtrtk980_ros2_reader</name>
  <version>0.1.0</version>
  <description>Decoupled C++ WTRTK-980 GNSS/RTK serial reader and ROS2 publisher.</description>
  <maintainer email="657625501@qq.com">Cain-A</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
